找回不需要规则版本

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3968,7 +3968,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "x = [1,2,3]\n",
+    "\n",
+    "y = [5,7,4]\n",
+    "\n",
+    "x2 = [1,2,3]\n",
+    "\n",
+    "y2 = [10,14,12]\n",
+    "\n",
+    "plt.plot(x, y, label='First Line')\n",
+    "\n",
+    "plt.plot(x2, y2, label='Second Line')"
+   ]
   }
  ],
  "metadata": {
